# telegram_chat_summarizer

./: .env.sample  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.py
src/: aggregate_analysis.py  fetch_data.py  query_data.py  utils.py
